tests/ui/closures/2229_closure_analysis/optimization/edge_case.stderr
error: First Pass analysis includes:
  --> $DIR/edge_case.rs:20:39
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                       ^^^^^^^^^^^^^^^
   |
note: Capturing m[Deref,(0, 0),Deref,(0, 0)] -> Immutable
  --> $DIR/edge_case.rs:20:48
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                                ^^^^^

error: Min Capture analysis includes:
  --> $DIR/edge_case.rs:20:39
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                       ^^^^^^^^^^^^^^^
   |
note: Min Capture m[Deref,(0, 0),Deref] -> Immutable
  --> $DIR/edge_case.rs:20:48
   |
LL |     let c = #[rustc_capture_analysis] || drop(&m.a.0);
   |                                                ^^^^^

error: aborting due to 2 previous errors

